Avoid wrapping on longer emails

--- a/assets/css/styles-2.css
+++ b/assets/css/styles-2.css
@@ -92,6 +92,7 @@ p {
 }
 .sidebar-wrapper .contact-list li {
   margin-bottom: 15px;
+  white-space: nowrap;
 }
 .sidebar-wrapper .contact-list li:last-child {
   margin-bottom: 0;
