--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -91,6 +91,7 @@ p {
   vertical-align: middle;
 }
 .sidebar-wrapper .contact-list li {
+  white-space: nowrap;
   margin-bottom: 15px;
 }
 .sidebar-wrapper .contact-list li:last-child {
